# constrained-agent

./: .gitignore  README.md  example.py  example_analytics.py  example_medical.py  example_medical_spec.json  example_order.py  example_order_spec.json  example_spec.json  example_support.py  example_support_spec.json  pyproject.toml
benchmarks/: README.md
benchmarks/bfcl/: harness.py  run.py
benchmarks/bfcl/constraints/: __init__.py  gorilla_fs.py  math_api.py  message_api.py  ticket_api.py  trading_bot.py  travel_api.py  twitter_api.py  vehicle_control.py
constrained_agent/: __init__.py  agent.py  constraints.py  format.py  session.py  spec.py  tools.py
constrained_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
constrained_agent/backends/: base.py  openai.py
constrained_agent/formats/: deepseek.yaml  hermes.yaml  qwen3.yaml
constrained_agent/models/: __init__.py  anthropic.py  base.py  openai.py
