[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "constrained-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
